test/subjects/errors/continue_outer.php
<?php

	continue; // { phc-error: Cannot break/continue 1 levels }
?>
